@@ -7,7 +7,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class OlympicGamesService {
@@ -35,6 +34,6 @@ public class OlympicGamesService {
                 .findOlympicGamesPlaceStreamByCompetition(competitorNames)
                 .stream()
                 .map(OlympicGames::getHostingPlace)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
